# easytransfer

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
docs/architecture/: ARCHITECTURE.md
docs/guides/: DEV_GUIDE.md
docs/specs/: MILESTONES.md  PRD.md  TECH_SPEC.md
src/easytransfer/: __init__.py  __main__.py  cli.py  mcp_server.py
src/easytransfer/core/: __init__.py  config.py  errors.py  logging.py  models.py
src/easytransfer/executor/: __init__.py  engine.py  rollback.py  verifier.py
src/easytransfer/mcp/: __init__.py  server.py  tools.py
src/easytransfer/packager/: __init__.py  manifest.py  packer.py  unpacker.py
src/easytransfer/planner/: __init__.py  analyzer.py  app_knowledge.py  plan_builder.py
src/easytransfer/scanner/: __init__.py  app_scanner.py  base.py  browser_scanner.py  config_scanner.py  dev_env_scanner.py  file_scanner.py  git_ssh_scanner.py  orchestrator.py  registry.py
src/easytransfer/security/: __init__.py  crypto.py  key_derivation.py
tests/: conftest.py
tests/unit/: test_cli.py  test_config.py  test_errors.py  test_mcp_tools.py  test_models.py
tests/unit/test_executor/: test_config_restorer.py  test_engine.py  test_file_restorer.py  test_rollback.py  test_verifier.py  test_winget_installer.py
tests/unit/test_packager/: test_manifest.py  test_packer_unpacker.py
tests/unit/test_planner/: __init__.py  test_analyzer.py  test_app_knowledge.py  test_plan_builder.py
tests/unit/test_scanner/: __init__.py  test_app_scanner.py  test_base.py  test_dev_env_scanner.py  test_registry.py
(+7 files in other folders)
