[project]
name = "easytransfer"
version = "0.1.0"
description = "AI-powered Windows PC migration skill (MCP Server) — one-click transfer from old PC to new PC"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "cryptography>=42.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[project.scripts]
easytransfer = "easytransfer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
